--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
+    "@rewind-ui/core": "^0.10.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "immer": "^10.0.2",
@@ -21,6 +26,7 @@
     "pure-rand": "^6.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
