--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pure-rand": "^6.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "svg-round-corners": "^0.4.1",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
