--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "alea": "^1.0.1",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "immer": "^10.0.2",
     "next": "13.4.9",
+    "noisejs": "^2.1.0",
     "postcss": "8.4.25",
+    "pts": "^0.11.3",
     "pure-rand": "^6.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "simplex-noise": "^4.0.1",
     "svg-round-corners": "^0.4.1",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
